--- a/package.json
+++ b/package.json
@@ -33,24 +33,23 @@
     ]
   },
   "dependencies": {
-    "next": "^8.0.0",
-    "next-eslint": "^0.0.4",
-    "prop-types": "^15.7.2",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0"
+    "next": "8.0.0",
+    "prop-types": "15.7.2",
+    "react": "16.7.0",
+    "react-dom": "16.7.0"
   },
   "devDependencies": {
-    "eslint": "^5.15.3",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^4.1.0",
+    "eslint": "5.15.3",
+    "eslint-config-airbnb": "17.1.0",
+    "eslint-config-prettier": "4.1.0",
     "eslint-plugin-import": "2.16.0",
     "eslint-plugin-jsx-a11y": "6.2.1",
-    "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-react": "^7.12.4",
-    "install-peers": "^1.0.3",
-    "lint-staged": "^8.1.5",
-    "preact": "^8.4.2",
-    "prettier": "^1.16.4",
-    "webpack": "^4.29.6"
+    "eslint-plugin-prettier": "3.0.1",
+    "eslint-plugin-react": "7.12.4",
+    "install-peers": "1.0.3",
+    "lint-staged": "8.1.5",
+    "preact": "8.4.2",
+    "prettier": "1.16.4",
+    "webpack": "4.29.6"
   }
 }
