--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
   },
   "main": "pages/index.js",
   "scripts": {
-    "build": "next build",
-    "dev": "next",
-    "now-build": "next build",
+    "build": "next ./src build",
+    "dev": "next ./src",
+    "now-build": "next ./src build",
     "lint-staged": "lint-staged",
     "lint": "eslint --fix --ext .js,.jsx ./"
   },
@@ -44,10 +44,12 @@
     "eslint": "5.15.3",
     "eslint-config-airbnb": "17.1.0",
     "eslint-config-prettier": "4.1.0",
+    "eslint-loader": "^2.1.2",
     "eslint-plugin-import": "2.16.0",
     "eslint-plugin-jsx-a11y": "6.2.1",
     "eslint-plugin-prettier": "3.0.1",
     "eslint-plugin-react": "7.12.4",
+    "husky": "^1.3.1",
     "install-peers": "1.0.3",
     "lint-staged": "8.1.5",
     "preact": "8.4.2",
