--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "dev": "next",
     "now-build": "next build",
     "lint-staged": "lint-staged",
-    "lint": "eslint --fix --ext .js,.jsx ./"
+    "lint": "eslint --fix --ext .js,.jsx ./",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "pre-commit": "lint-staged",
   "lint-staged": {
@@ -35,12 +37,21 @@
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-source-maps": "^0.0.3",
+    "core-js": "3",
     "next": "8.0.4",
     "prop-types": "15.7.2",
     "react": "16.8.6",
     "react-dom": "16.8.6"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
+    "@storybook/addon-actions": "^5.0.6",
+    "@storybook/addon-links": "^5.0.6",
+    "@storybook/addons": "^5.0.6",
+    "@storybook/react": "^5.0.6",
+    "babel-loader": "^8.0.5",
+    "babel-preset-env": "^1.7.0",
     "eslint": "5.16.0",
     "eslint-config-airbnb": "17.1.0",
     "eslint-config-prettier": "4.1.0",
@@ -54,6 +65,7 @@
     "lint-staged": "8.1.5",
     "preact": "8.4.2",
     "prettier": "1.16.4",
+    "react-scripts": "^2.1.8",
     "webpack": "4.29.6"
   }
 }
