--- a/now.json
+++ b/now.json
@@ -4,7 +4,7 @@
   "alias": "regexbuilder",
   "builds": [
     {
-      "src": "package.json",
+      "src": "next.config.js",
       "use": "@now/next"
     }
   ]
