--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-source-maps": "^0.0.3",
+    "codacy-coverage": "^3.4.0",
     "core-js": "3",
     "next": "8.0.4",
     "prop-types": "15.7.2",
