--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,17 +11,16 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          name: Restore Yarn Package Cache
-          keys:
-            - yarn-packages-{{ checksum "yarn.lock" }}
+          name: Restore node_modules
+          key: dependency-cache-{{ checksum "package.json" }}
       - run:
           name: Install Dependencies
           command: yarn install --frozen-lockfile
       - save_cache:
-          name: Save Yarn Package Cache
-          key: yarn-packages-{{ checksum "yarn.lock" }}
+          name: Save node_modules
+          key: dependency-cache-{{ checksum "package.json" }}
           paths:
-            - ~/.cache/yarn
+            - node_modules
   yarn_test:
     docker:
       - image: circleci/node:11.13.0
@@ -29,10 +28,8 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          name: Restore Yarn Package Cache
-          keys:
-            - yarn-packages-{{ checksum "yarn.lock" }}
-      - run: yarn
+          name: Restore node_modules
+          key: dependency-cache-{{ checksum "package.json" }}
       - run:
           name: Running test and creating coverage
           command: yarn test:coverage
@@ -41,4 +38,6 @@ workflows:
   test_and_coverage:
     jobs:
       - yarn_install
-      - yarn_test
+      - yarn_test:
+          requires:
+            - yarn_install
