--- a/package.json
+++ b/package.json
@@ -49,7 +49,6 @@
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-source-maps": "^0.0.3",
-    "codacy-coverage": "^3.4.0",
     "core-js": "3",
     "next": "8.0.4",
     "prop-types": "15.7.2",
@@ -85,6 +84,7 @@
     "prettier": "1.16.4",
     "react-scripts": "^2.1.8",
     "react-test-renderer": "^16.8.6",
-    "webpack": "4.29.6"
+    "webpack": "4.29.6",
+    "codacy-coverage": "^3.4.0"
   }
 }
