ci(deploy): Added deploy workflow (Not done yet)

--- a/now.json
+++ b/now.json
@@ -2,6 +2,9 @@
   "version": 2,
   "name": "regexbuilder",
   "alias": "regexbuilder",
+  "github": {
+    "autoAlias": false
+  },
   "builds": [
     {
       "src": "next.config.js",
