--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "build": "next build",
     "dev": "next",
     "now-build": "next build",
+    "clean": "git clean -d -f",
     "lint-staged": "lint-staged",
     "lint": "eslint --ignore-path .gitignore --fix --ext .js,.jsx ./",
     "storybook": "yarn run prebuild:storybook && start-storybook -p 6006",
@@ -25,7 +26,8 @@
     "build-storybook": "build-storybook",
     "test": "jest",
     "test:coverage": "jest --coverage && cat ./coverage/lcov.info | codacy-coverage",
-    "test:generate-output": "jest --json --outputFile=.jest-test-results.json || true"
+    "test:generate-output": "jest --json --outputFile=.jest-test-results.json || true",
+    "release": "semantic-release"
   },
   "pre-commit": "lint-staged",
   "lint-staged": {
@@ -45,6 +47,21 @@
       "./"
     ],
     "verbose": true
+  },
+  "release": {
+    "plugins": [
+      "@semantic-release/commit-analyzer",
+      [
+        "@semantic-release/npm",
+        {
+          "npmPublish": false
+        }
+      ],
+      "@semantic-release/release-notes-generator",
+      "@semantic-release/changelog",
+      "@semantic-release/git",
+      "@semantic-release/github"
+    ]
   },
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
@@ -68,6 +85,7 @@
     "@storybook/react": "^5.0.6",
     "babel-jest": "^24.7.1",
     "babel-loader": "^8.0.5",
+    "cz-conventional-changelog": "2.1.0",
     "eslint": "5.16.0",
     "eslint-config-airbnb": "17.1.0",
     "eslint-config-prettier": "4.1.0",
@@ -87,6 +105,18 @@
     "webpack": "4.29.6"
   },
   "optionalDependencies": {
-    "codacy-coverage": "^3.4.0"
+    "@semantic-release/changelog": "^3.0.2",
+    "@semantic-release/commit-analyzer": "^6.1.0",
+    "@semantic-release/git": "^7.0.8",
+    "@semantic-release/github": "^5.2.10",
+    "@semantic-release/npm": "^5.1.4",
+    "@semantic-release/release-notes-generator": "^7.1.4",
+    "codacy-coverage": "^3.4.0",
+    "semantic-release": "^15.13.3"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
