ci(deploy): Added real semantic-release config to deploy

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,6 +61,9 @@ jobs:
           name: Restore node_modules
           key: dependency-cache-{{ checksum "package.json" }}
       - run:
+          name: Install now-cli
+          command: yarn global add now
+      - run:
           name: Running semantic-release
           command: yarn release
 workflows:
