--- a/package.json
+++ b/package.json
@@ -59,6 +59,12 @@
       ],
       "@semantic-release/release-notes-generator",
       "@semantic-release/changelog",
+      [
+        "@semantic-release/exec",
+        {
+          "publishCmd": "now -t $NOW_TOKEN --target production"
+        }
+      ],
       "@semantic-release/git",
       "@semantic-release/github"
     ]
