ci(deploy): Added the release step to the release workflow

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -83,3 +83,6 @@ workflows:
       - yarn_test:
           requires:
             - yarn_install
+      - yarn_release:
+          requires:
+            - yarn_test
