--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "verbose": true
   },
   "release": {
+    "branch": "release",
     "plugins": [
       "@semantic-release/commit-analyzer",
       [
