Revert "ci(deploy): Now only deploying chnages on release branch"
This reverts commit 848c71e633f01efd2225af8a0b54ee94148e5144.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -79,7 +79,7 @@ workflows:
       - yarn_install:
           filters:
             branches:
-              only: release
+              only: master
       - yarn_test:
           requires:
             - yarn_install
