--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "prebuild:storybook": "yarn run test:generate-output",
     "build-storybook": "build-storybook",
     "test": "jest",
-    "test:coverage": "jest --coverage && cat ./coverage/lcov.info | codacy-coverage",
+    "test:coverage": "jest --coverage && codecov",
     "test:generate-output": "jest --json --outputFile=.jest-test-results.json || true",
     "release": "semantic-release"
   },
@@ -92,11 +92,12 @@
     "babel-jest": "^24.7.1",
     "babel-loader": "^8.0.5",
     "cz-conventional-changelog": "2.1.0",
-    "eslint": "5.16.0",
+    "eslint": "^5.16.0",
     "eslint-config-airbnb": "17.1.0",
     "eslint-config-prettier": "4.1.0",
     "eslint-loader": "^2.1.2",
     "eslint-plugin-import": "2.16.0",
+    "eslint-plugin-jest": "^22.4.1",
     "eslint-plugin-jsx-a11y": "6.2.1",
     "eslint-plugin-prettier": "3.0.1",
     "eslint-plugin-react": "7.12.4",
@@ -119,6 +120,7 @@
     "@semantic-release/npm": "^5.1.4",
     "@semantic-release/release-notes-generator": "^7.1.4",
     "codacy-coverage": "^3.4.0",
+    "codecov": "^3.3.0",
     "semantic-release": "^15.13.3"
   },
   "config": {
