--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "prebuild:storybook": "yarn run test:generate-output",
     "build-storybook": "build-storybook",
     "test": "jest",
-    "test:coverage": "jest --coverage && codecov",
+    "test:coverage": "jest --coverage && cat ./coverage/lcov.info | codacy-coverage",
     "test:generate-output": "jest --json --outputFile=.jest-test-results.json || true",
     "release": "semantic-release"
   },
@@ -120,7 +120,6 @@
     "@semantic-release/npm": "^5.1.4",
     "@semantic-release/release-notes-generator": "^7.1.4",
     "codacy-coverage": "^3.4.0",
-    "codecov": "^3.3.0",
     "semantic-release": "^15.13.3"
   },
   "config": {
