--- a/package.json
+++ b/package.json
@@ -73,10 +73,12 @@
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-source-maps": "^0.0.3",
     "core-js": "3",
+    "dotenv": "^7.0.0",
     "next": "8.0.4",
     "prop-types": "15.7.2",
     "react": "16.8.6",
-    "react-dom": "16.8.6"
+    "react-dom": "16.8.6",
+    "webpack": "4.29.6"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
@@ -108,8 +110,7 @@
     "preact": "8.4.2",
     "prettier": "1.17.0",
     "react-scripts": "^2.1.8",
-    "react-test-renderer": "^16.8.6",
-    "webpack": "4.30.0"
+    "react-test-renderer": "^16.8.6"
   },
   "optionalDependencies": {
     "@semantic-release/changelog": "^3.0.2",
