--- a/package.json
+++ b/package.json
@@ -72,13 +72,13 @@
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-source-maps": "^0.0.3",
-    "core-js": "3",
+    "core-js": "^3",
     "dotenv": "^7.0.0",
-    "next": "8.0.4",
-    "prop-types": "15.7.2",
-    "react": "16.8.6",
-    "react-dom": "16.8.6",
-    "webpack": "4.29.6"
+    "next": "^8.0.4",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "webpack": "^4.29.6"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
@@ -93,22 +93,22 @@
     "@storybook/react": "^5.0.6",
     "babel-jest": "^24.7.1",
     "babel-loader": "^8.0.5",
-    "cz-conventional-changelog": "2.1.0",
+    "cz-conventional-changelog": "^2.1.0",
     "eslint": "^5.16.0",
-    "eslint-config-airbnb": "17.1.0",
-    "eslint-config-prettier": "4.1.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^4.1.0",
     "eslint-loader": "^2.1.2",
-    "eslint-plugin-import": "2.16.0",
+    "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jest": "^22.4.1",
-    "eslint-plugin-jsx-a11y": "6.2.1",
-    "eslint-plugin-prettier": "3.0.1",
-    "eslint-plugin-react": "7.12.4",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react": "^7.12.4",
     "husky": "^1.3.1",
-    "install-peers": "1.0.3",
+    "install-peers": "^1.0.3",
     "jest": "^24.7.1",
-    "lint-staged": "8.1.5",
-    "preact": "8.4.2",
-    "prettier": "1.17.0",
+    "lint-staged": "^8.1.5",
+    "preact": "^8.4.2",
+    "prettier": "^1.17.0",
     "react-scripts": "^2.1.8",
     "react-test-renderer": "^16.8.6"
   },
