--- a/package.json
+++ b/package.json
@@ -29,14 +29,24 @@
     "test:generate-output": "jest --json --outputFile=.jest-test-results.json --setupFiles dotenv/config || true",
     "release": "semantic-release"
   },
-  "pre-commit": "lint-staged",
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged && yarn test",
+      "pre-push": "yarn test"
+    }
+  },
   "lint-staged": {
-    "*.js": [
+    "*.{js,jsx}": [
       "eslint --fix",
+      "prettier --write",
       "git add"
     ],
-    "*.jsx": [
-      "eslint --fix",
+    "*.json": [
+      "prettier --write",
+      "git add"
+    ],
+    "*.yml": [
+      "prettier --write",
       "git add"
     ]
   },
