chore(propTypes): Fixed proptypes in Layout
You can now add multiple children to Layout

--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "storybook": "yarn run prebuild:storybook && start-storybook -p 6006",
     "prebuild:storybook": "yarn run test:generate-output",
     "build-storybook": "build-storybook",
-    "test": "jest --setupFiles dotenv/config",
-    "test:coverage": "jest --coverage --setupFiles dotenv/config && cat ./coverage/lcov.info | codacy-coverage",
-    "test:generate-output": "jest --json --outputFile=.jest-test-results.json --setupFiles dotenv/config || true",
+    "test": "jest ",
+    "test:coverage": "jest --coverage  && cat ./coverage/lcov.info | codacy-coverage",
+    "test:generate-output": "jest --json --outputFile=.jest-test-results.json  || true",
     "release": "semantic-release"
   },
   "husky": {
@@ -83,7 +83,6 @@
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-source-maps": "^0.0.3",
     "core-js": "^3",
-    "dotenv": "^7.0.0",
     "next": "^8.0.4",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
